--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@types/node": "18.15.13",
@@ -23,8 +25,14 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.14",
     "@tanstack/react-query": "^4.29.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "axios": "^1.3.6",
-    "clsx": "^1.2.1"
+    "clsx": "^1.2.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "react-intersection-observer": "^9.4.3"
   }
 }
